# VaiPlayer

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/vaipixel/helloplayer/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/vaipixel/helloplayer/: MainActivity.kt
android/app/src/main/java/com/vaipixel/helloplayer/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/vaipixel/helloplayer/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/libplayer/: build.gradle.kts
android/libplayer/src/androidTest/java/com/vaipixel/libplayer/: ExampleInstrumentedTest.kt
android/libplayer/src/main/cpp/: CMakeLists.txt  libplayer.cpp
android/libplayer/src/main/java/com/vaipixel/libplayer/: NativeLib.kt
android/libplayer/src/test/java/com/vaipixel/libplayer/: ExampleUnitTest.kt
include/vaiplayer/core/: Player.h
scripts/ffmpeg/: build_ffmpeg_one.sh
scripts/mp3lame/: Android.mk
scripts/openssl/: build_openssl.sh
scripts/x264/: build_x264.sh
src/core/: Player.cpp
